[143] fixed sonarLint issues